changed navbar so it no longer wraps on smaller screens

--- a/public/scss/_navbar.scss
+++ b/public/scss/_navbar.scss
@@ -4,6 +4,11 @@ nav {
   margin: 0 auto;
 }
 
+.navbar-brand {
+  font-weight: 800;
+  font-size: 1.4rem;
+}
+
 .nav-link {
   text-decoration: none;
   font-weight: 500;
